--- a/src/app.html
+++ b/src/app.html
@@ -2,8 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta property="og:title" content="epq directory" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://recognizer.cephas.monster/" />
+        <meta property="og:image" content="https://recognizer.cephas.monster/favicon.svg" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
