service worker, manifest and title

--- a/src/app.html
+++ b/src/app.html
@@ -4,11 +4,13 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta property="og:title" content="epq directory" />
+        <meta property="og:title" content="Music Recognizer" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://recognizer.cephas.monster/" />
         <meta property="og:image" content="https://recognizer.cephas.monster/favicon.svg" />
+		<title>Music Recognizer</title>
 		%sveltekit.head%
+		<link rel="manifest" href="%sveltekit.assets%/manifest.json">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
