manifest.json app.html

--- a/src/app.html
+++ b/src/app.html
@@ -12,7 +12,7 @@
 		%sveltekit.head%
 		<link rel="manifest" href="%sveltekit.assets%/manifest.json">
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="bg-gradient-to-tl from-cyan-200 to-zinc-200 h-screen">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
